# automatic_process_control_causal_ml_example

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/: add-anomaly-type.md  add-estimator.md  check-quality.md  run-pipeline.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: config.yaml
data/: ate_results.json  causal_graph.pkl  dag_metrics.json  detector.pkl  process_data.parquet
great_expectations/expectations/: process_data_suite.json
notebooks/: exploration.ipynb
src/process_control_causal_ml/: __init__.py  causal_graph.py  causal_model.py  control.py  dashboard.py  detect.py  serve.py  simulate.py  utils.py
tests/: conftest.py  test_causal_graph.py  test_causal_model.py  test_control.py  test_detect.py  test_serve.py  test_simulate.py  test_utils.py
